--- a/adminv2/templates/adminv2/users/partials/users-table.html
+++ b/adminv2/templates/adminv2/users/partials/users-table.html
@@ -1,6 +1,7 @@
 {% load static %}
-<table class="w-full text-sm text-left text-gray-500">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+<div class="overflow-x-auto max-h-[80vh]">
+<table class="w-full text-sm text-left text-gray-500 overflow-x-scroll overflow-y-scroll">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 sticky top-0 z-10">
             <tr class="*:px-6 *:py-3">
                 <th scope="col"><span>Profile Photo</span></th>
                 <th scope="col" class="">
@@ -52,7 +53,7 @@
             {% endfor %}
         </tbody>
     </table>
-
+</div>
     
 {% if users.paginator.num_pages > 1 %}
     <nav aria-label="pagination" class="my-3">
