--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -107,7 +107,7 @@
         <div x-show="loading">   
             {% component "table_skeleton" %} {% endcomponent %}
         </div>
-        <div x-show="!loading" id="user-list-container" class="relative flex flex-col items-center shadow-md sm:rounded-lg"></div>
+        <div x-show="!loading" id="user-list-container" class="relative flex flex-col shadow-md sm:rounded-lg"></div>
     </div>
     
     
