--- a/adminv2/templates/adminv2/listing/listing.html
+++ b/adminv2/templates/adminv2/listing/listing.html
@@ -139,7 +139,7 @@
         <div x-show="loading">   
             {% component "table_skeleton" %} {% endcomponent %}
         </div>
-        <div id="listing-container" x-show="!loading" class="relative flex flex-col items-center shadow-md sm:rounded-lg"></div>
+        <div id="listing-container" x-show="!loading" class="relative flex flex-col shadow-md sm:rounded-lg"></div>
     </div>
     
 
@@ -353,7 +353,6 @@
                 deleteListing(data_id, event)
             }
             openModal_delete_listing_modal();
-
         }
 
         function deleteListing(listing_id, event){
