--- a/adminv2/templates/adminv2/listing/partials/listing-items.html
+++ b/adminv2/templates/adminv2/listing/partials/listing-items.html
@@ -1,6 +1,7 @@
 {% if results %}
-    <table class="w-full text-sm text-left text-gray-500">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+<div class="overflow-x-auto max-h-[80vh]">
+    <table class="w-full text-sm text-left text-gray-500 overflow-x-scroll overflow-y-scroll">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 sticky top-0 z-10">
             <tr>
                 <th scope="col" class="px-6 py-3">
                     Title
@@ -62,6 +63,7 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 
     {% if total_pages > 1 %}
     <nav aria-label="pagination" class="my-3">
