--- a/adminv2/templates/adminv2/messaging/index.html
+++ b/adminv2/templates/adminv2/messaging/index.html
@@ -49,7 +49,7 @@
         <div x-show="loading">   
             {% component "table_skeleton" %} {% endcomponent %}
         </div>
-        <div x-show="!loading" id="message-list-container" class="relative flex flex-col items-center shadow-md sm:rounded-lg">
+        <div x-show="!loading" id="message-list-container" class="relative flex flex-col shadow-md sm:rounded-lg">
         
         </div>
     </div>
