--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -12,6 +12,8 @@
     <script src="https://unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    {% block style %}{% endblock %}
 </head>
 <body class="font-base text-gray-900">
     <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
