--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,13 +19,13 @@
             </div>
         </article>
 
-        <section class="flex flex-col gap-2 items-end pt-40 lg:pt-14 responsive-padding">
+        <section class="flex flex-col gap-2 items-start pt-40 lg:pt-14 responsive-padding">
             <div class="flex flex-col gap-4 xl:flex-row xl:gap-4">
                 <header class="xl:w-[15%]">
                     <h2 class="text-xl font-semibold">Travel</h2>
                     <div class="hidden md:block">Get to know the upcoming Windows 11, the Windows that brings you closer to what you love.</div>
                 </header>
-                <div class="w-full flex gap-4 overflow-x-scroll lg:overflow-x-visible lg:flex-wrap xl:flex-nowrap *:grow">
+                <div class="w-full flex gap-4 overflow-x-auto lg:overflow-x-visible lg:flex-wrap xl:flex-nowrap *:grow">
                     {% component "blog_card" title="Reponsible AI and trustworthy innovation n Windows" tag="Travel" imageUrl="{% static 'images/smiling-on-workstation.png' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
                     
                     {% component "blog_card" title="Reponsible AI and trustworthy innovation n Windows" tag="Travel" imageUrl="{% static 'images/smiling-on-workstation.png' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
