--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 {% load static %}
 
-{% block title %}Home - Eaglespoint Horizon Limited{% endblock %}
+{% block title %}{{ article.title }}{% endblock %}
 {% block styleblock %}
     <style>
 
