--- a/staticfiles/css/input.css
+++ b/staticfiles/css/input.css
@@ -1,4 +1,4 @@
-
+@import "tailwindcss";
 
 @source '../../**/templates/**/*.html';
 @source '../../components/**/*.html';
@@ -18,10 +18,6 @@
 }
 
 @layer components{
-
-  html, body {
-    overflow-x: hidden;
-  }
 
   .responsive-padding{
     @apply px-4 md:px-8 lg:px-20;
