--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -84,11 +84,11 @@
         </nav>
 
         <!-- Main content -->
-        <div class="lg:col-span-3 px-4">
+        <div class="flex flex-col gap-7 lg:col-span-3 pt-2 px-4 h-[100vh]">
             <header class="flex justify-between">
                 <div>
                     <h1 class="text-2xl font-bold">Admin Panel</h1>
-                    <h2 class="text-2xl font-medium">
+                    <h2 class="text-xl font-medium">
                         {% block section_title %} {% endblock %}
                     </h2>
                 </div>
@@ -111,6 +111,7 @@
             </header>
             
             {% block content %}{% endblock %}
+
         </div>
     </div>
 
